<?xml version="1.0"?>
<package>
  <name>my_msgs</name>
  <version>0.0.0</version>
  <description>The my_msgs package</description>

  <maintainer email="zdenal@todo.todo">zdenal</maintainer>
  <license>TODO</license>
  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
  <buildtool_depend>catkin</buildtool_depend>

</package>
